--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,18 +1741,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10296"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data17' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_874/3822285152.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mtriangular_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mday17\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata17\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'data17' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2431,10 +2432,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((-20, -36, -47), (26, 17, 7), 1),\n",
+       " ((-20, -21, -26), (33, 23, 28), 1),\n",
+       " ((-22, -29, -38), (28, 23, 16), 1),\n",
+       " ((-46, -6, -50), (7, 46, -1), 1),\n",
+       " ((-49, -3, -24), (1, 46, 28), 1),\n",
+       " ((2, -22, -23), (47, 22, 27), 1),\n",
+       " ((-27, -28, -21), (23, 26, 29), 1),\n",
+       " ((-39, -6, -3), (5, 47, 44), 1),\n",
+       " ((-30, -8, -13), (21, 43, 34), 1),\n",
+       " ((-22, -27, -29), (26, 20, 19), 1),\n",
+       " ((-48, 26, -47), (-32, 41, -37), 0),\n",
+       " ((-12, 6, -50), (35, 50, -2), 1),\n",
+       " ((-48, -32, -15), (-32, -16, -5), 0),\n",
+       " ((-18, -33, -7), (26, 15, 46), 1),\n",
+       " ((-40, -38, 23), (-22, -28, 41), 0),\n",
+       " ((-16, -41, -47), (35, 10, 6), 1),\n",
+       " ((-32, 11, -14), (-23, 30, 3), 0),\n",
+       " ((-49, -3, -29), (-5, 45, 18), 1),\n",
+       " ((18, -20, -3), (30, -8, 13), 0),\n",
+       " ((-41, -7, -33), (9, 43, 15), 1),\n",
+       " ((-54112, -85059, -27449), (-39298, -49293, 7877), 1),\n",
+       " ((967, 45373, 27513), (23432, 81175, 53682), 1)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = re.compile('x=([0-9\\-]+)\\.\\.([0-9\\-]+),y=([0-9\\-]+)\\.\\.([0-9\\-]+),z=([0-9\\-]+)\\.\\.([0-9\\-]+)')\n",
+    "def format22(line: str):\n",
+    "  status, dimensions = line.split(' ')\n",
+    "  x1, x2, y1, y2, z1, z2 = [int(i) for i in pattern.match(dimensions).groups()]\n",
+    "  return ((x1, y1, z1), (x2, y2, z2), 1 if status == 'on' else 0) \n",
+    "\n",
+    "data22 = data(22, format22)\n",
+    "data22"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Rectangle [(0.0, 9.0), (0.0, 10.0), (0.0, 10.0)]>"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class ReactorRectangle(spatial.Rectangle):\n",
+    "  def contains(self, rect: 'ReactorRectangle'):\n",
+    "    for i, v in enumerate(self.mins):\n",
+    "      if v > rect.mins[i] or self.maxes[i] < rect.maxes[i]:\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "  def intersects(self, rect: 'ReactorRectangle'):\n",
+    "    return self.min_distance_rectangle(rect) == 0\n",
+    "\n",
+    "  def overlap(self, rect: 'ReactorRectangle'):\n",
+    "    maxes = [min(self.maxes[i], rect.maxes[i]) for i in range(len(self.maxes))]\n",
+    "    mins = [max(self.mins[i], rect.mins[i]) for i in range(len(self.mins))]\n",
+    "    return ReactorRectangle(maxes, mins)\n",
+    "\n",
+    "a = ReactorRectangle((0, 0, 0), (10, 10, 10))\n",
+    "b = ReactorRectangle((0, 0, 0), (9, 10, 10))\n",
+    "a.contains(b), b.contains(a), a.intersects(b)\n",
+    "a.get_overlap(b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def merge_rectangles(a: spatial.Rectangle, b: spatial.Rectangle):\n",
+    "  return spatial.Rectangle(\n",
+    "    min(a.x1, b.x1),\n",
+    "    min(a.y1, b.y1),\n",
+    "    max(a.x2, b.x2),\n",
+    "    max(a.y2, b.y2)\n",
+    "  )\n",
+    "\n",
+    "class Reactor:\n",
+    "  def __init__(self):\n",
+    "    self.states = []\n",
+    "\n",
+    "  def update(self, status: int, mins: tuple[int, int, int], maxes: tuple[int, int, int]):\n",
+    "    rect = spatial.Rectangle(maxes, mins)\n",
+    "    self.on(rect) if status == 1 else self.off(rect)\n",
+    "\n",
+    "  def find_collisions\n",
+    "\n",
+    "  def on(self, rect: spatial.Rectangle):\n",
+    "    pass\n",
+    "\n",
+    "  def off(self, rect: spatial.Rectangle):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
