--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,7 @@
     "import networkx as nx\n",
     "import re\n",
     "from scipy import spatial\n",
+    "from sortedcontainers import SortedList\n",
     "from typing import Callable, TypeVar, Union, Optional\n",
     "\n",
     "T = TypeVar('T')\n",
@@ -1552,6 +1553,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'copy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_870/3391467143.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'copy'"
+     ]
+    }
+   ],
+   "source": [
+    "tuple((1, 1)).copy()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2907,14 +2929,290 @@
    "metadata": {},
    "source": [
     "1. 570915\n",
-    "2. 1268313839428137 (slow)"
+    "2. 1268313839428137 (slow - also can be slightly off)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 23"
+    "## Day 23\n",
+    "1. Generate possible outputs from current state\n",
+    "2. Run dijkstra on state to end state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amphipod_mapping = {\n",
+    "  'A': 0,\n",
+    "  'B': 1,\n",
+    "  'C': 2,\n",
+    "  'D': 3\n",
+    "}\n",
+    "hallway = tuple([0]*11)\n",
+    "rooms = [[],[],[],[]]\n",
+    "def add_line_to_room(line: str):\n",
+    "  count = 0\n",
+    "  for i in line:\n",
+    "    if i not in amphipod_mapping.keys():\n",
+    "      continue\n",
+    "    pod = 10**amphipod_mapping[i]\n",
+    "    rooms[count].append(pod)\n",
+    "    count += 1\n",
+    "data(23, add_line_to_room)\n",
+    "rooms = tuple([tuple(room) for room in rooms])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10526"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Done by hand\n",
+    "def day23():\n",
+    "  a = 1\n",
+    "  b = 10\n",
+    "  c = 100\n",
+    "  d = 1000\n",
+    "\n",
+    "  step1 = 2*d + 2*d + 3*c\n",
+    "  step2 = 3*d + 2*d\n",
+    "  step3 = 5*a + 5*a\n",
+    "  step4 = 6*b\n",
+    "  step5 = 7*c + 4*c\n",
+    "  step6 = 5*b\n",
+    "  step7 = 3*a + 3*a\n",
+    "  return step1 + step2 + step3 + step4 + step5 + step6 + step7\n",
+    "\n",
+    "day23()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10526"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Could not figure out how to do part 2 by hand, so redid it using dijkstra here\n",
+    "class Room:\n",
+    "  def __init__(self, target: int, pods: list[int], size: int):\n",
+    "    self.target = target\n",
+    "    self.pods = pods\n",
+    "    self.size = size\n",
+    "    \n",
+    "  def __repr__(self) -> str:\n",
+    "      return str(self.pods)\n",
+    "\n",
+    "  def ready(self):\n",
+    "    for i in self.pods:\n",
+    "      if i != self.target:\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "  def cost(self):\n",
+    "    return self.size - len(self.pods)\n",
+    "\n",
+    "class Hallway:\n",
+    "  def __init__(self, positions):\n",
+    "    self.positions = list(positions)\n",
+    "\n",
+    "  def __repr__(self) -> str:\n",
+    "      return str([x for x in self.positions])\n",
+    "\n",
+    "  def hallway_pods(self):\n",
+    "    for position, pod in enumerate(self.positions):\n",
+    "      if pod:\n",
+    "        yield (pod, position)\n",
+    "\n",
+    "  def room_hall(self, room: int):\n",
+    "    return room*2 + 2\n",
+    "\n",
+    "  def done(self):\n",
+    "    for i in self.positions:\n",
+    "      if i:\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "  # Methods on pods in the hallway\n",
+    "  def _reachable(self, start: int, end: int):\n",
+    "    for i in range(start, end):\n",
+    "      if self.positions[i] != 0:\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "  def reachable(self, start: int, end: int):\n",
+    "    if start < end:\n",
+    "      return self._reachable(start+1, end+1)\n",
+    "    return self._reachable(end, start)\n",
+    "\n",
+    "  def room_reachable(self, position: int, room: int):\n",
+    "    return self.reachable(position, self.room_hall(room))\n",
+    "  \n",
+    "  # Methods on pods entering the hallway\n",
+    "  def valid_left(self, position: int):\n",
+    "    for i in range(position-1, 0, -2):\n",
+    "      if self.positions[i]:\n",
+    "        return\n",
+    "      yield i\n",
+    "    if not self.positions[0]:\n",
+    "      yield 0\n",
+    "\n",
+    "  def valid_right(self, position: int):\n",
+    "    for i in range(position+1, 10, 2):\n",
+    "      if self.positions[i]:\n",
+    "        return\n",
+    "      yield i\n",
+    "    if not self.positions[10]:\n",
+    "      yield 10\n",
+    "\n",
+    "  def reachable_positions(self, room: int):\n",
+    "    position = self.room_hall(room)\n",
+    "    yield from self.valid_left(position)\n",
+    "    yield from self.valid_right(position)\n",
+    "\n",
+    "  def update(self, position: int, value: int):\n",
+    "    new_hallway = self.positions.copy()\n",
+    "    new_hallway[position] = value\n",
+    "    return tuple(new_hallway)\n",
+    "\n",
+    "class State:\n",
+    "  def __init__(self, hallway: Hallway, rooms: list[Room]):\n",
+    "    self.hallway = hallway\n",
+    "    self.rooms = tuple(rooms)\n",
+    "\n",
+    "  def pod_room(self, pod: int):\n",
+    "    return int(np.log10(pod))\n",
+    "\n",
+    "  def add_rooms(self, room: int):\n",
+    "    rooms = [tuple(room.pods) for room in self.rooms]\n",
+    "    rooms[room] = (self.rooms[room].target, *rooms[room])\n",
+    "    return tuple(rooms)\n",
+    "\n",
+    "  def hallway_moves(self):\n",
+    "    for pod, position in self.hallway.hallway_pods():\n",
+    "      room_number = self.pod_room(pod)\n",
+    "      room = self.rooms[room_number]\n",
+    "      if not room.ready():\n",
+    "        continue\n",
+    "      if self.hallway.room_reachable(position, room_number):\n",
+    "        distance = (abs(position - self.hallway.room_hall(room_number)) + room.cost()) * pod\n",
+    "        new_hallway = self.hallway.update(position, 0)\n",
+    "        yield (distance, new_hallway, self.add_rooms(room_number))\n",
+    "\n",
+    "  def pop_rooms(self, pop: int):\n",
+    "    rooms = [tuple(room.pods) for room in self.rooms]\n",
+    "    rooms[pop] = tuple(self.rooms[pop].pods[1:])\n",
+    "    return tuple(rooms)\n",
+    "\n",
+    "  def room_moves(self):\n",
+    "    for i, room in enumerate(self.rooms):\n",
+    "      if room.ready():\n",
+    "        continue\n",
+    "      new_rooms = self.pop_rooms(i)\n",
+    "      for position in self.hallway.reachable_positions(i):\n",
+    "        pod = room.pods[0]\n",
+    "        new_hallway = self.hallway.update(position, pod)\n",
+    "        distance = (room.cost() + 1 + abs(position - self.hallway.room_hall(i)))*pod\n",
+    "        yield (distance, new_hallway, new_rooms)\n",
+    "\n",
+    "  def __repr__(self):\n",
+    "    return f'Hallway: {self.hallway}, Rooms: {str(self.rooms)}'\n",
+    "\n",
+    "  def done(self):\n",
+    "    for room in self.rooms:\n",
+    "      if not room.ready():\n",
+    "        return False\n",
+    "    return self.hallway.done()\n",
+    "\n",
+    "  def valid_moves(self):\n",
+    "    for i in self.hallway_moves():\n",
+    "      yield i\n",
+    "    for i in self.room_moves():\n",
+    "      yield i\n",
+    "\n",
+    "def search_amphipod(hallway: tuple[int], rooms: tuple[tuple[int]]):\n",
+    "  roomsize = len(rooms[0])\n",
+    "  visited = set()\n",
+    "  frontier = SortedList([(0, hallway, rooms)], key=lambda x: -x[0])\n",
+    "  while frontier:\n",
+    "    distance, hallway, rooms = frontier.pop()\n",
+    "    if (hallway, rooms) in visited:\n",
+    "      continue\n",
+    "    visited.add((hallway, rooms))\n",
+    "    state = State(Hallway(hallway), [Room(10**i, room, roomsize) for i, room in enumerate(rooms)])\n",
+    "    if state.done():\n",
+    "      return distance\n",
+    "    for d, h, r in state.valid_moves():\n",
+    "      if (h, r) not in visited:\n",
+    "        frontier.add((d+distance, h, r))\n",
+    "\n",
+    "def day23v2():\n",
+    "  return search_amphipod(hallway, rooms)  \n",
+    "\n",
+    "day23v2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41284"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day23_2():\n",
+    "  expanded = (\n",
+    "    (rooms[0][0], 1000, 1000, rooms[0][1]),\n",
+    "    (rooms[1][0], 100, 10, rooms[1][1]),\n",
+    "    (rooms[2][0], 10, 1, rooms[2][1]),\n",
+    "    (rooms[3][0], 1, 100, rooms[3][1])\n",
+    "  )\n",
+    "  return search_amphipod(hallway, expanded)\n",
+    "\n",
+    "day23_2()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 24"
    ]
   },
   {
