--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3217,10 +3217,220 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data24 = data(24, lambda x: x.split(' '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 0, 'y': 0, 'z': 19}) i ['mul', 'x', '0']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 19, 'y': 0, 'z': 19}) i ['add', 'x', 'z']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 19, 'y': 0, 'z': 19}) i ['mod', 'x', '26']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 19, 'y': 0, 'z': 0}) i ['div', 'z', '26']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 9, 'y': 0, 'z': 0}) i ['add', 'x', '-10']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 1, 'y': 0, 'z': 0}) i ['eql', 'x', 'w']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 0, 'y': 0, 'z': 0}) i ['eql', 'x', '0']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 0, 'y': 0, 'z': 0}) i ['mul', 'y', '0']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 0, 'y': 25, 'z': 0}) i ['add', 'y', '25']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 0, 'y': 0, 'z': 0}) i ['mul', 'y', 'x']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 0, 'y': 1, 'z': 0}) i ['add', 'y', '1']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 0, 'y': 1, 'z': 0}) i ['mul', 'z', 'y']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 0, 'y': 0, 'z': 0}) i ['mul', 'y', '0']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 0, 'y': 9, 'z': 0}) i ['add', 'y', 'w']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 0, 'y': 22, 'z': 0}) i ['add', 'y', '13']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 0, 'y': 0, 'z': 0}) i ['mul', 'y', 'x']\n",
+      "r defaultdict(<function ALU.reset.<locals>.<lambda> at 0x7f8eddd8f1c0>, {'w': 9, 'x': 0, 'y': 0, 'z': 0}) i ['add', 'z', 'y']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.ALU.reset.<locals>.<lambda>()>,\n",
+       "            {'w': 9, 'x': 0, 'y': 0, 'z': 0})"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class ALU:\n",
+    "  def __init__(self, data: list[str]):\n",
+    "    self.instructions = data\n",
+    "    self.variables = defaultdict(lambda: 0)\n",
+    "    self.inputs = []\n",
+    "\n",
+    "  def input(self, key: str):\n",
+    "    value = self.inputs.popleft()\n",
+    "    self.variables[key] = int(value)\n",
+    "\n",
+    "  def add(self, key: str, value: int):\n",
+    "    self.variables[key] += value\n",
+    "\n",
+    "  def mul(self, key: str, value: int):\n",
+    "    self.variables[key] *= value\n",
+    "\n",
+    "  def div(self, key: str, value: int):\n",
+    "    self.variables[key] //= value\n",
+    "\n",
+    "  def mod(self, key: str, value: int):\n",
+    "    self.variables[key] %= value\n",
+    "\n",
+    "  def eql(self, a: str, b: str):\n",
+    "    self.variables[a] = 1 if self.value(a) == self.value(b) else 0\n",
+    "\n",
+    "  def value(self, input: str):\n",
+    "    if input[0] == '-' or input[0].isdigit():\n",
+    "      return int(input)\n",
+    "    return self.variables[input]\n",
+    "\n",
+    "  def update_instructions(self, data: list[str]):\n",
+    "    self.instructions = data\n",
+    "\n",
+    "  def reset(self, variables={}):\n",
+    "    self.variables = defaultdict(lambda: 0, variables)\n",
+    "\n",
+    "  def check(self, input: int, variables={}):\n",
+    "    self.reset(variables)\n",
+    "    self.inputs = deque(str(input))\n",
+    "    for instruction in self.instructions:\n",
+    "      self.run(instruction)\n",
+    "    return self.variables\n",
+    "\n",
+    "  def run(self, instruction: str):\n",
+    "    if instruction[0] == 'inp':\n",
+    "      return self.input(instruction[1])\n",
+    "    op, key, v = instruction\n",
+    "    value = self.value(v)\n",
+    "    match op:\n",
+    "      case 'add':\n",
+    "        self.add(key, value)\n",
+    "      case 'mul':\n",
+    "        self.mul(key, value)\n",
+    "      case 'div':\n",
+    "        self.div(key, value)\n",
+    "      case 'mod':\n",
+    "        self.mod(key, value)\n",
+    "      case 'eql':\n",
+    "        self.eql(key, v)\n",
+    "    print('r', self.variables, 'i', instruction)\n",
+    "\n",
+    "def split_by_inps(instructions: list[str]):\n",
+    "  groups, current = [], []\n",
+    "  for i in instructions:\n",
+    "    if i[0] == 'inp':\n",
+    "      groups.append(current)\n",
+    "      current = [i]\n",
+    "    else:\n",
+    "      current.append(i)\n",
+    "  groups.append(current)\n",
+    "  return groups[1:]\n",
+    "\n",
+    "\n",
+    "def check(input: tuple[int, int, int, int, int]):\n",
+    "  w, x, y, z, new = input\n",
+    "  result = machine.check(new, {'w': w, 'x':x, 'y':y, 'z':z})\n",
+    "  return result\n",
+    "\n",
+    "machine = ALU([])\n",
+    "igroups = split_by_inps(data24)\n",
+    "machine.update_instructions(igroups[-1])\n",
+    "\n",
+    "check((0,0,0,19,9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "No results on 13",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_4414/2754800524.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     35\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m \u001b[0mderive_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m13\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_4414/2754800524.py\u001b[0m in \u001b[0;36mderive_state\u001b[0;34m(i, targets)\u001b[0m\n\u001b[1;32m     32\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtargets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'No results on {i}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: No results on 13"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "def derive_state(i: int, targets: set[tuple[int, int, int, int]] = None):\n",
+    "\n",
+    "  def matches_target(input: tuple[int, int, int, int, int]):\n",
+    "    result = check(input)\n",
+    "    output = (result['w'], result['x'], result['y'], result['z'])\n",
+    "    if not targets:\n",
+    "      return output if result['z'] == 0 else False\n",
+    "    return output if output in targets else False\n",
+    "\n",
+    "  machine.update_instructions(igroups[i])\n",
+    "  results = {}\n",
+    "  for w in range(10):\n",
+    "    for x in range(10):\n",
+    "      for y in range(10):\n",
+    "        for z in range(10):\n",
+    "          for new in range(9, -1, -1):\n",
+    "            config = (w, x, y, z)\n",
+    "            if config in results:\n",
+    "              continue\n",
+    "            if output := matches_target((w, x, y, z, new)):\n",
+    "              results[config] = (*output, new)\n",
+    "\n",
+    "  if not results:\n",
+    "    raise Exception(f'No results on {i}')\n",
+    "  return results\n",
+    "\n",
+    "derive_state(13)\n",
+    "\n",
+    "def retrieve_max(results: dict[int, dict[tuple, tuple]]):\n",
+    "  pass\n",
+    "\n",
+    "def day24(data: list[str]):\n",
+    "  igroups = split_by_inps(data24)\n",
+    "  targets = None\n",
+    "  results = {}\n",
+    "\n",
+    "  for i in range(len(igroups)-1,0,-1):\n",
+    "    result = derive_state(i, targets)\n",
+    "    print(i, len(result))\n",
+    "    results[i] = result\n",
+    "    targets = set(result.keys())\n",
+    "  \n",
+    "  return results\n",
+    "\n",
+    "day24(data24)"
+   ]
   }
  ],
  "metadata": {
