--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2947,10 +2947,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data25 = np.array(data(25, lambda x: np.array(list(x))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def step(data: np.array):\n",
+    "  moved = 0\n",
+    "\n",
+    "  result = data.copy()\n",
+    "  eastwards = np.argwhere(data == '>')\n",
+    "  for row, col in eastwards:\n",
+    "    east = (col+1)%data.shape[1]\n",
+    "    if data[row, east] == '.':\n",
+    "      result[row, east] = '>'\n",
+    "      result[row, col] = '.'\n",
+    "      moved += 1\n",
+    "\n",
+    "  result, data = result.copy(), result\n",
+    "  southwards = np.argwhere(data == 'v')\n",
+    "  for row, col in southwards:\n",
+    "    south = (row+1)%data.shape[0]\n",
+    "    if data[south, col] == '.':\n",
+    "      result[south, col] = 'v'\n",
+    "      result[row, col] = '.'\n",
+    "      moved += 1\n",
+    "\n",
+    "  return result, moved\n",
+    "\n",
+    "def day25(data: np.array):\n",
+    "  for i in range(1, 1000):\n",
+    "    data, moved = step(data)\n",
+    "    if not moved:\n",
+    "      np.savetxt('output_day25.txt', data, fmt='%s')\n",
+    "      return i\n",
+    "\n",
+    "day25(data25)"
+   ]
   }
  ],
  "metadata": {
