--- a/ipynb/2021.ipynb
+++ b/ipynb/2021.ipynb
@@ -965,7 +965,7 @@
     "    claimed.add((x, y))\n",
     "    return 1 + claim(x+1, y) + claim(x-1, y) + claim(x, y+1) + claim(x, y - 1)\n",
     "\n",
-    "  basins = [] # TODO: use 3-heap instead\n",
+    "  basins = [] # TODO: use heap instead\n",
     "  for (x, y) in get_basins(data):\n",
     "    if basin_size := claim(x, y):\n",
     "      basins.append(basin_size)\n",
@@ -2942,7 +2942,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Day 25"
+    "## Day 25\n",
+    "\n",
+    "Simple array operations"
    ]
   },
   {
