--- a/2021/python/2021.ipynb
+++ b/2021/python/2021.ipynb
@@ -25,7 +25,7 @@
     "# Helper functions\n",
     "\n",
     "def data(day: int, parser: Callable[[str], T] = str) -> list[T]:\n",
-    "  with open(f\"../data/2021/day{day}.txt\") as f:\n",
+    "  with open(f\"../data/day{day}.txt\") as f:\n",
     "    return [parser(line.strip()) for line in f.readlines()]\n",
     "\n",
     "def split_csv_row(row: str) -> list[int]:\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "1688"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "1728"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
