--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "import numpy as np\n",
     "import numpy.typing as npt\n",
     "import re\n",
+    "from sortedcontainers import SortedList\n",
     "from typing import Callable, TypeVar, Union, Optional\n",
     "\n",
     "T = TypeVar('T')\n",
@@ -22,7 +23,7 @@
     "# Helper functions\n",
     "\n",
     "def data(day: int, parser: Callable[[str], T] = str) -> list[T]:\n",
-    "  with open(f\"../data/day{day}.txt\") as f:\n",
+    "  with open(f\"./data/day{day}.txt\") as f:\n",
     "    return [parser(line.strip()) for line in f.readlines()]\n",
     "\n",
     "def split_csv_row(row: str) -> list[int]:\n",
@@ -41,6 +42,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_day1(data):\n",
+    "  elves = SortedList()\n",
+    "  current = 0\n",
+    "  for food in data:\n",
+    "    if not food:\n",
+    "      elves.add(current)\n",
+    "      current = 0\n",
+    "    else:\n",
+    "      current += int(food)\n",
+    "  return elves\n",
+    "\n",
+    "data1 = parse_day1(data(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71780"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "212489"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(data1[-3:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -49,7 +117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('.venv': poetry)",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -63,12 +131,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f7751bb5c9abf6c32282e5839b81493231a53189eabddb0be35db44e3ac44a1f"
+    "hash": "ca3ed784184f1b3bb7c3539bfb45e71710cd27667424f92c2d5bb4df9c107c23"
    }
   }
  },
