--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +109,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'A Z': 201,\n",
+       "         'C Z': 624,\n",
+       "         'A X': 328,\n",
+       "         'B Z': 384,\n",
+       "         'C X': 461,\n",
+       "         'C Y': 170,\n",
+       "         'B X': 133,\n",
+       "         'B Y': 161,\n",
+       "         'A Y': 38})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def parse2(data):\n",
+    "  result = Counter()\n",
+    "  for round in data:\n",
+    "    result[round] += 1\n",
+    "  return result\n",
+    "data2 = parse2(data(2))\n",
+    "data2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13924"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score = {\n",
+    "  'A X': 3 + 1, # Rock Rock\n",
+    "  'A Y': 6 + 2, # Rock Paper\n",
+    "  'A Z': 0 + 3, # Rock Scissor\n",
+    "  'B X': 0 + 1, # Paper Rock\n",
+    "  'B Y': 3 + 2, # Paper Paper\n",
+    "  'B Z': 6 + 3, # Paper Scissor\n",
+    "  'C X': 6 + 1, # Scissor Rock\n",
+    "  'C Y': 0 + 2, # Scissor Paper\n",
+    "  'C Z': 3 + 3, # Scissor Scissor\n",
+    "}\n",
+    "sum([score[x]*data2[x] for x in data2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13448"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score = {\n",
+    "  'A X': 0 + 3, # Rock Lose Sciss\n",
+    "  'A Y': 3 + 1, # Rock Draw Rock\n",
+    "  'A Z': 6 + 2, # Rock Win Paper\n",
+    "  'B X': 0 + 1, # Paper Lose Rock\n",
+    "  'B Y': 3 + 2, # Paper Draw Paper\n",
+    "  'B Z': 6 + 3, # Paper Win Sciss\n",
+    "  'C X': 0 + 2, # Scissor Lose Paper\n",
+    "  'C Y': 3 + 3, # Scissor Draw Sciss\n",
+    "  'C Z': 6 + 1, # Scissor Win Rock\n",
+    "}\n",
+    "sum([score[x]*data2[x] for x in data2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -117,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3.11.0 ('.venv': poetry)",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +239,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ca3ed784184f1b3bb7c3539bfb45e71710cd27667424f92c2d5bb4df9c107c23"
+    "hash": "728fda44ccb96f2ef97227e2e00831284321f32932a1624dced75e1d30908e3d"
    }
   }
  },
