--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -109,36 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'A Z': 201,\n",
-       "         'C Z': 624,\n",
-       "         'A X': 328,\n",
-       "         'B Z': 384,\n",
-       "         'C X': 461,\n",
-       "         'C Y': 170,\n",
-       "         'B X': 133,\n",
-       "         'B Y': 161,\n",
-       "         'A Y': 38})"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def parse2(data):\n",
     "  result = Counter()\n",
     "  for round in data:\n",
     "    result[round] += 1\n",
     "  return result\n",
-    "data2 = parse2(data(2))\n",
-    "data2"
+    "data2 = parse2(data(2))"
    ]
   },
   {
@@ -212,15 +192,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data3 = data(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7727"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rucksack_items(rucksack):\n",
+    "  length = len(rucksack)//2\n",
+    "  return rucksack[:length], rucksack[length:]\n",
+    "\n",
+    "def item_priority(item):\n",
+    "  if ord(item) > 96:\n",
+    "    return ord(item) - 96\n",
+    "  return ord(item) - 38\n",
+    "  \n",
+    "def day3(data):\n",
+    "  sum = 0\n",
+    "  for x in data:\n",
+    "    a, b = rucksack_items(x)\n",
+    "    sum += item_priority(list(set(a).intersection(set(b)))[0])\n",
+    "  return sum\n",
+    "\n",
+    "day3(data3)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 ('.venv': poetry)",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +257,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "728fda44ccb96f2ef97227e2e00831284321f32932a1624dced75e1d30908e3d"
+    "hash": "ca3ed784184f1b3bb7c3539bfb45e71710cd27667424f92c2d5bb4df9c107c23"
    }
   }
  },
