--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -196,12 +196,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data3 = data(3)"
+    "data3 = data(3)\n",
+    "\n",
+    "def item_priority(item):\n",
+    "  if ord(item) > 96:\n",
+    "    return ord(item) - 96\n",
+    "  return ord(item) - 38"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +215,7 @@
        "7727"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,11 +224,6 @@
     "def rucksack_items(rucksack):\n",
     "  length = len(rucksack)//2\n",
     "  return rucksack[:length], rucksack[length:]\n",
-    "\n",
-    "def item_priority(item):\n",
-    "  if ord(item) > 96:\n",
-    "    return ord(item) - 96\n",
-    "  return ord(item) - 38\n",
     "  \n",
     "def day3(data):\n",
     "  sum = 0\n",
@@ -234,6 +234,48 @@
     "\n",
     "day3(data3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2609"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day3_2(data):\n",
+    "  sum = 0\n",
+    "  for i in range(len(data)//3):\n",
+    "    a, b, c = data[i*3:i*3+3]\n",
+    "    common = set(a).intersection(set(b)).intersection(set(c))\n",
+    "    sum += item_priority(list(common)[0])\n",
+    "  return sum\n",
+    "\n",
+    "day3_2(data3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
