--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "\n",
     "from collections import defaultdict, Counter, deque\n",
-    "import itertools\n",
     "from functools import lru_cache\n",
+    "import itertools\n",
+    "from intervaltree import IntervalTree, Interval\n",
     "import json\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
     "import re\n",
     "from sortedcontainers import SortedList\n",
     "from typing import Callable, TypeVar, Union, Optional\n",
+    "\n",
     "\n",
     "T = TypeVar('T')\n",
     "\n",
@@ -268,6 +270,75 @@
    "metadata": {},
    "source": [
     "# Day 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data4 = data(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def has_envelop(a, b):\n",
+    "  return a[0] <= b[0] and a[1] >= b[1]\n",
+    "\n",
+    "def day4(data, f):\n",
+    "  count = 0\n",
+    "  for i in data:\n",
+    "    a, b = [[int(x) for x in elf.split('-')] for elf in i.split(',')]\n",
+    "    count += f(a, b) or f(b, a)\n",
+    "  return count\n",
+    "\n",
+    "day4(data4, has_envelop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "891"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def has_overlap(a, b):\n",
+    "  return (a[0] <= b[0] and a[1] >= b[0]) or (a[0] >= b[0] and a[0] <= b[1])\n",
+    "\n",
+    "day4(data4, has_overlap)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 5"
    ]
   },
   {
