--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,10 +343,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RFFFWBPNS\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day5():\n",
+    "  def parse5():\n",
+    "    with open('./data/day5.txt') as f:\n",
+    "      lines = f.readlines()\n",
+    "    positions = defaultdict(lambda: deque())\n",
+    "    line_length = len(lines[0])\n",
+    "    for n, line in enumerate(lines):\n",
+    "      for i in range(line_length//4):\n",
+    "        item = line[i*4:i*4+4].strip()\n",
+    "        if item == '1':\n",
+    "          return positions, lines[n+2:]\n",
+    "        if item:\n",
+    "          positions[i].append(re.match('\\[([A-Z])\\]', item)[1])\n",
+    "\n",
+    "  def make_move(positions, count, start, end):\n",
+    "    if count == 0:\n",
+    "      return\n",
+    "    item = positions[start].popleft()\n",
+    "    positions[end].appendleft(item)\n",
+    "    return make_move(positions, count-1, start, end)\n",
+    "\n",
+    "  def read_top(positions):\n",
+    "    return ''.join([positions[i][0] for i in range(len(positions))])\n",
+    "\n",
+    "  positions, moves = parse5()\n",
+    "\n",
+    "  for turn in moves:\n",
+    "    result = re.match('move (\\d+) from (\\d) to (\\d)', turn)\n",
+    "    # print(positions, int(result[1]), int(result[2])-1, int(result[3])-1)\n",
+    "    make_move(positions, int(result[1]), int(result[2])-1, int(result[3])-1)\n",
+    "\n",
+    "  return read_top(positions)\n",
+    "\n",
+    "print(day5())"
+   ]
   }
  ],
  "metadata": {
